# zero-to-production

./: .gitignore  Cargo.toml  README.md  configuration.yaml
.github/workflows/: general.yml
docs/: chapter01.md  chapter02.md  chapter03.md  chapter04.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
